sticky nav and typos

--- a/contents.html
+++ b/contents.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
@@ -66,12 +66,12 @@
                 <div class="flexColumn about portfolio">   
                     <img class="gridImage hero" src="./asset/contentsFull.png">
                     <div class="portfolioTitle gridItemTitle serif">
-                        Contents Inventory for Theft Reimbursement
+                        Taking Inventory After Theft
                         <div class="portfolioSubhead">Problem Statement
-                            <p class="portfolioText">When filing a claim for stolen goods, the customer is required to produce a list of belongins that were affected with details such as category, cost, and brand. This used to be accomplished by having the customer send an spreadsheet or numerous emails listing all these details that an adjuster would then have to re-enter into an application that would cerify princing data. Our business partners wanted to create a solution that would allow customers to continuously enter there belongings digitally in one place that would sync seamlessly with the software adjusters use. 
+                            <p class="portfolioText">When filing a claim for stolen goods, the customer is required to produce a list of belongings that were affected with details such as category, cost, and brand. This used to be accomplished by having the customer send an spreadsheet or numerous emails listing all these details that an adjuster would then have to re-enter into an application that would verify pricing data. Our business partners wanted to create a solution that would allow customers to continuously enter their belongings digitally in one place that would sync seamlessly with the software adjusters use. 
                         </div>
                         <div class="portfolioSubhead">Ideation and Design
-                            <p class="portfolioText">Knowing that its easier to pare down a design than expand at a later date, early iterations embraced the "Pie in the Sky" mantra and included features such as using Amazon's database of products to let customers find their items and have the system prefill the rest of the information. In the end, a simpler solution was created that allows customers to enter as few details as possible to reduce their burden.
+                            <p class="portfolioText">Knowing that it's easier to pare down a design than expand at a later date, early iterations embraced the "Pie in the Sky" mantra and included features such as using Amazon's database of products to let customers find their items and have the system prefill the rest of the information. In the end, a simpler solution was created that allows customers to enter as few details as possible to reduce their burden.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Results
