--- a/glass.html
+++ b/glass.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
@@ -66,27 +66,27 @@
                 <div class="flexColumn about portfolio">   
                     <img class="gridImage hero" src="./asset/glassAlt.png">
                     <div class="portfolioTitle gridItemTitle serif">
-                        Auto Glass Claims Vision Work
+                        Auto Glass Claim Visioning
                         <div class="portfolioSubhead">Problem Statement
-                            <p class="portfolioText">While most customers have a postive experience with the Glass claim experience, there was room for improvement. At the time, the vast majority of these claims were being filed via phone. My business partners tasked us with finding ways our 3rd party vendor could improve and looking at what a potential in-house solution could look like.
+                            <p class="portfolioText">While most customers have a positive experience with the Glass claim experience, there was room for improvement. At the time, the vast majority of these claims were being filed via phone. Our business partners tasked us with finding ways our 3rd party vendor could improve and looking at what a potential in-house solution could look like.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Early Findings
-                            <p class="portfolioText">Since this product is hosted by a 3rd party, we had to be creative in our research. We partnered with our SEO and Data Analytics team to gleam any relevant data beyond what the 3rd party was willing to share. In addition with stakeholder interviews, on-site interviews at the vendor's shop, we were able to put together mental models and an experience map to represent our customers' experience when filing glass claims.
+                            <p class="portfolioText">Since this product is hosted by a 3rd party, we had to be creative in our research. We partnered with our SEO and Data Analytics team to glean any relevant data beyond what the 3rd party was willing to share. In addition with stakeholder interviews, on-site interviews at the vendor's shop, we were able to put together mental models and an experience map to represent our customers' experience when filing glass claims.
                             <br><br>
-                            The intial research indicated most customers were apprehensive about filing due to unknown costs, unaswered questions, and scheduling problems. 
+                            The initial research indicated most customers were apprehensive about filing due to unknown costs, unanswered questions, and scheduling problems. 
                             </p>
                         </div>
                         <div class="portfolioSubhead">Ideation and Design
-                            <p class="portfolioText">Based on the research we conducted, we began looking at potential near and far term solutions. We created a bevy of concepts with accompaning illustrations to help our business partners envision a better glass claim experience.
+                            <p class="portfolioText">Based on the research we conducted, we began looking at potential near and far term solutions. We created a bevy of concepts with accompanying illustrations to help our business partners envision a better glass claim experience.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Results
-                            <p class="portfolioText">Our business parters agreeed that despite the difficulty of covnincing the vendor to implement changes, there were many beneficial changes that could be made. Currently our business partners are waiting for development resources before moving forward with some of our proposed concepts.
+                            <p class="portfolioText">Our business partners agreed that despite the difficulty of convincing the vendor to implement changes, there were many beneficial changes that could be made. Currently our business partners are waiting for development resources before moving forward with some of our proposed concepts.
                             </p>
                         </div>
-                        <button class="gridButton">
-                            <a href="./photoest.html">View Shareout on inVision</a>
+                        <button onclick="location.href='https://eagle.invisionapp.com/share/XTEJYBVQH2K'" class="gridButton">
+                            View Shareout on inVision
                         </button>
                     </div>
                     
