--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <div class="pageTitle"> 
                         <div class="title serif">Travis</div>
@@ -64,14 +64,14 @@
                 <div class="contents ">
                         Hi 👋,
                         <br><br>
-                        I'm Travis, currently a Creative Designer for USAA, based in San Antonio, Texas.
+                        I'm Travis! I currently work as a Creative Designer for USAA, based in San Antonio, Texas.
                         <br><br>
-                        As a designer, I engage with business stakeholders to guide strategic visioning, guide and facilitate Human Centered Design
+                        As a designer, I engage with business stakeholders to guide strategic visioning, facilitate Human Centered Design
                         research with customers and internal stakeholders, and create mockups for development team guidance using Sketch and InVision.  I also collaborate with other designers to critique and improve design work.
                         <br><br>
-                        I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020 with specialities in Interaction Design, UX Management, and UX Research.
+                        I have a B.S. in Computer Science with an emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020 with specialities in Interaction Design, UX Management, and UX Research.
                         <br><br>
-                        When I'm not in the office, I'm exploring craft coffee, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
+                        When I'm not in the office, I'm looking for the best coffee spots in my townn, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
                         <br><br>
                         
                 </div>
