--- a/photoest.html
+++ b/photoest.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
@@ -68,15 +68,15 @@
                     <div class="portfolioTitle gridItemTitle serif">
                         Virtual Photo Estimates for Auto Repairs
                         <div class="portfolioSubhead">Problem Statement
-                            <p class="portfolioText">Previously, a 3rd party solution was used to capture photos of a damaged vehicles after an accident to create a repair estimate. After using this solution for several years, our business partners were receiving a large volume of complaints about the difficulty customers were experienceing using the product.
+                            <p class="portfolioText">Previously, a 3rd party solution was used to capture photos of damaged vehicles after an accident to create a repair estimate. After using this solution for several years, our business partners were receiving a large volume of complaints about the difficulty customers were experiencing using the product.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Early Findings
-                            <p class="portfolioText">Our team conducted qualitative user testing with real customers in our Claims Lab to assess the problems with the 3rd part solution. Our primary findings found that customers had difficulty understanding what photos were required and why, how to capture the VIN on their vehicle, and understanding if they were successful in upploading their photos. <br><br> From this initial assesment, we worked to create potential solutions that were presented both to our business partners and the 3rd party vendor; however, the changes requested by our business partners were rejected by the vendor as this product was a White Label solution for many insurers. Given this, our business partners tasked me with designing an in-house solution.
+                            <p class="portfolioText">Our team conducted qualitative user testing with real customers in our Claims Lab to assess the problems with the 3rd part solution. Our primary findings found that customers had difficulty understanding what photos were required and why, how to capture the VIN on their vehicle, and understanding if they were successful in uploading their photos. <br><br> From this initial assessment, we worked to create potential solutions that were presented both to our business partners and the 3rd party vendor; however, the changes requested by our business partners were rejected by the vendor as this product was a White Label solution for many insurers. Given this, our business partners tasked me with designing an in-house solution.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Ideation and Design
-                            <p class="portfolioText">Since the nature of this project cented on understanding how customers interact with the product through the camera (and technical limitations), we actually printed physical copies of the design to have participants imagine their experience with the product. After several iterations and rounds of low-fidelity testing, final screens were created and put into production.
+                            <p class="portfolioText">Since the nature of this product centered on understanding how customers interact with it through the camera, we actually printed physical copies of the design to have participants imagine their experience with the product. After several iterations and rounds of low-fidelity testing, final screens were created and put into production.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Results
