--- a/repairmanager.html
+++ b/repairmanager.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
@@ -66,13 +66,13 @@
                 <div class="flexColumn about portfolio">   
                     <img class="gridImage hero" src="./asset/rem.png">
                     <div class="portfolioTitle gridItemTitle serif">
-                        Repair Manager
+                        Managing Repair Services During a Claim
                         <div class="portfolioSubhead">Problem Statement
                             <p class="portfolioText">As part of the transition to create a fully digital claims experience, the customer needed a solution to indicate a need for water clean up services and later how they prefer to get an inspection of their home. Since there was no prior digital solution, I was able to create the experience with few constraints beyond our legal and brand requirements.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Ideation and Design
-                            <p class="portfolioText">What started as a simple form design soon morphed as business requirements shifted and different aspects were re-prioritized. One of the larger hurdles was ensuring that insurance jargon was reducded to a minimum to reduce the customer's cognitive burden.
+                            <p class="portfolioText">What started as a simple form design soon morphed as business requirements shifted and different aspects were re-prioritized. One of the larger hurdles was ensuring that insurance jargon was reduced to a minimum to reduce the customer's cognitive burden.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Results
