--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
@@ -62,9 +62,9 @@
             <div class="flexColumn divider">
                 <div class="borderRight"></div>
             </div>
-            <div class="flexColumn full">
+            <div class="flexColumn full pdf">
                 <div class="flexColumn about">   
-                    <img class="pdf" src="./asset/resImg.png">                  
+                    <img c src="./asset/resImg.png">                  
                 </div>
                 <button onclick="location.href='./asset/Resume2022.pdf'" class="gridButton subButton">
                     Download as PDF
