--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
 
     <body class="page sans">
         <div class="flexContainer">  
-            <div>
+            <div class="stickyNav">
                 <div class="list">
                     <a href="./index.html">
                         <div class="pageTitle">
