--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
                     <img class="gridImage" src="./asset/rm.png">
                     <div class="gridDescrip">
                         <div class="gridItemTitle serif">Managing Repair Services During a Claim
-                            <div>Rather than waiting for an adjuster to call and arrange emergency serices, we empower customers to get the services they need proactively.</div>
+                            <div>Rather than waiting for an adjuster to call and arrange emergency services, we empower customers to get the services they need proactively.</div>
                         </div>
                         <button onclick="location.href='./repairmanager.html'" class="gridButton">
                             View Project
