--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92562835-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-EV9E6778K8"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'UA-92562835-1');
+        gtag('config', 'G-EV9E6778K8');
         </script>
 
         <meta charset="utf-8">
