--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="flexColumn divider">
                 <div class="borderRight"></div>
             </div>
-            <div class="flexColumn about">
+            <div class="flexColumn about pdf">
                 <div class="contents ">
                         Hi 👋,
                         <br><br>
@@ -80,31 +80,13 @@
                         <br><br>
                         I have a B.S. in Computer Science with an emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020 with specialities in Interaction Design, UX Management, and UX Research.
                         <br><br>
-                        When I'm not in the office, I'm looking for the best coffee spots in my townn, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
+                        When I'm not in the office, I'm looking for the best coffee spots in my town, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
                         <br><br>
                         
                 </div>
             </div>
         </div>
         
-        <!-- Google Analytics -->
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-92562835-1', 'auto');
-            ga('send', 'pageview');
-        </script>
-
     </body>
 
 </html>
