updaated page titles

--- a/contents.html
+++ b/contents.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Travis Cook - US Design & Research</title>
+        <title>Theft Inventory</title>
 
         <!-- Theme CSS -->
         <link href="css/newCSS.css" rel="stylesheet">
