--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Travis Cook - US Design & Research</title>
+        <title>Travis Cook - UX Design & Research</title>
 
         <!-- Theme CSS -->
         <link href="css/newCSS.css" rel="stylesheet">
