--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
                             <a href="./resume.html">Resume</a>
-                            <a href="./work.html">Portfolio</a>
+                            <!-- <a href="./work.html">Portfolio</a> -->
                             <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
@@ -60,7 +60,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./resume.html">Resume</a></li>
-                            <li><a href="./work.html">Portfolio</a></li>
+                            <!-- <li><a href="./work.html">Portfolio</a></li> -->
                             <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
