--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                           <a href="./resume.html">Resume</a>
-                          <a href="./work.html">Portfolio</a>
+                          <!-- <a href="./work.html">Portfolio</a> -->
                           <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                           <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
