--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     </div>  
                     <div class="links">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
+                            <!-- <li><a href="./index.html">Home</a></li> -->
                             <li><a href="./resume.html">Resume</a></li>
-                            <!-- <li><a href="./work.html">Portfolio</a></li> -->
+                            <!-- <li><a href="./index.html">Portfolio</a></li> -->
                             <li><a href="https://www.linkedin.com/in/travis-cook-uxmc">LinkedIn</a></li>
                             <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
@@ -91,7 +91,7 @@
                         <img class="gridImage" src="./asset/i2e.png">
                         <div class="gridDescrip">
                             <div class="gridItemTitle serif">Virtual Photo Estimates for Auto Repairs
-                                <div>Enabling customers to create an estimate for auto repairs without needing to schedule an appointment with an adjuster.</div>
+                                <div class="gridSubText">Enabling customers to create an estimate for auto repairs without needing to schedule an appointment with an adjuster.</div>
                             </div>
                             <button onclick="location.href='./photoest.html'" class="gridButton">
                                 View Project
@@ -102,7 +102,7 @@
                         <img class="gridImage" src="./asset/rm.png">
                         <div class="gridDescrip">
                             <div class="gridItemTitle serif">Managing Repair Services During a Claim
-                                <div>Rather than waiting for an adjuster to call and arrange emergency services, we empower customers to get the services they need proactively.</div>
+                                <div class="gridSubText">Rather than waiting for an adjuster to call and arrange emergency services, we empower customers to get the services they need proactively.</div>
                             </div>
                             <button onclick="location.href='./repairmanager.html'" class="gridButton">
                                 View Project
@@ -113,7 +113,7 @@
                         <img class="gridImage" src="./asset/contentsFrame.png">
                         <div class="gridDescrip">
                             <div class="gridItemTitle serif">Taking Inventory After Theft
-                                <div>
+                                <div class="gridSubText">
                                     Help customers efficiently inventory their stolen or damaged belongings to get quickly and accurately reimbursed.
                                 </div>
                             </div>
@@ -126,18 +126,19 @@
                         <img class="gridImage" src="./asset/glass.png">
                         <div class="gridDescrip">
                             <div class="gridItemTitle serif">Auto Glass Claim Visioning
-                                <div>Hands-on research led to revisinsioning the auto glass claims experience.</div>
+                                <div class="gridSubText">Hands-on research led to revisinsioning the auto glass claims experience.</div>
                             </div>
                             <button onclick="location.href='./glass.html'"class="gridButton">
                                 View Project
                             </button>
                         </div>
                     </div>
-                    <div class="flexColumn about gridItem">   
-                        <img class="gridImage" src="./asset/roadsideDek.png">
+                    <div class="flexColumn about gridItem"> 
+                        <img class="gridImage mobile" src="./asset/roadsideDesktop.png">  
+                        <img class="gridImage desktop" src="./asset/roadsideDek.png">
                         <div class="gridDescrip">
                             <div class="gridItemTitle serif">Roadside Assistance
-                                <div>A refreshed design to help customers understand how Roadside Assistance can help them.</div>
+                                <div class="gridSubText">A refreshed design to help customers understand how Roadside Assistance can help them.</div>
                             </div>
                             <button onclick="location.href='./roadside.html'"class="gridButton">
                                 View Project
