--- a/glass.html
+++ b/glass.html
@@ -88,7 +88,7 @@
                                     </p>
                                 </div>
                                 <div class="portfolioSubhead">Ideation and Design
-                                    <p class="portfolioText">Based on the research we conducted, we began looking at potential near and far term solutions. We created a bevy of concepts with accompanying illustrations to help our business partners envision a better glass claim experience.
+                                    <p class="portfolioText">Based on the research we conducted, we began looking at potential near and far term solutions. We envisioned concepts like bundling with pre-existing telematic apps, automated filing, streamlined scheduling, and more. These concepts were presented with accompanying illustrations to help our business partners envision a better glass claim experience.
                                     </p>
                                 </div>
                                 <div class="portfolioSubhead">Results
