--- a/photoest.html
+++ b/photoest.html
@@ -94,8 +94,8 @@
                             </div>
                             <img class="gridImage" src="./asset/i2e2.png">
                         </div>
-                        <div class="imageContainer">
-                            <div class="portfolioSubhead left">Results
+                        <div class="imageContainer colored">
+                            <div class="portfolioSubhead  left">Results
                                 <p class="portfolioText">While the designed solution has only been in production a short time, testing in production is pointing to an improved completion rate for digital estimates.<br><br>Our business partners have noted a decrease in calls to adjusters requesting help completing the flow.
                                 </p>
                             </div>
