removed green blocks

--- a/photoest.html
+++ b/photoest.html
@@ -79,6 +79,7 @@
                             <p class="portfolioText">Previously, a 3rd party solution was used to capture photos of damaged vehicles after an accident to create a repair estimate. <br/><br/>After using this solution for several years, our business partners were receiving a large volume of complaints about the difficulty customers were experiencing using the product.
                             </p>
                         </div>
+                        <hr/>
                         <div class="imageContainer colored">   
                             <img class="gridImage" src="./asset/i2e1.png">
                             <div class="portfolioSubhead right">Early Findings
@@ -86,6 +87,7 @@
                                 </p>
                             </div>
                         </div>
+                        <hr />
                         <div class="imageContainer">   
                             <div class="portfolioSubhead left">Ideation and Design
                                 <p class="portfolioText">Since the nature of this product centered on understanding how customers interact with it through the camera, we actually printed physical copies of the design to have participants imagine their experience with the product. 
@@ -94,7 +96,8 @@
                             </div>
                             <img class="gridImage" src="./asset/i2e2.png">
                         </div>
-                        <div class="imageContainer colored">
+                        <hr class="divider"></hr>
+                        <div class="imageContainer">
                             <div class="portfolioSubhead  left">Results
                                 <p class="portfolioText">While the designed solution has only been in production a short time, testing in production is pointing to an improved completion rate for digital estimates.<br><br>Our business partners have noted a decrease in calls to adjusters requesting help completing the flow.
                                 </p>
